Closed Bug 1604633 Opened 5 years ago Closed 5 years ago

Crash in [@ objc_exception_throw | -[NSObject doesNotRecognizeSelector:]], take 2

Categories

(Core :: Graphics: Layers, defect)

72 Branch
All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- unaffected
firefox71 --- unaffected
firefox72 + fixed
firefox73 + fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1602813 +++

The patch in bug 1602813 didn't fix the crash properly. It removed 1 out of 2 calls, the other one still remains. We still crash on macOS 10.9 every time the active GPU changes.

Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/f333efd51fbe Stop calling -[NSOpenGLContext pixelFormat] on 10.9, take 2. r=jrmuizel

Comment on attachment 9116546 [details]
Bug 1604633 - Stop calling -[NSOpenGLContext pixelFormat] on 10.9, take 2. r=jrmuizel

Beta/Release Uplift Approval Request

  • User impact if declined: Firefox will crash on macOS 10.9 every time the active GPU changes
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce: See bug 1602813 comment 8
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The fix is simple
  • String changes made/needed:
Attachment #9116546 - Flags: approval-mozilla-beta?
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

Comment on attachment 9116546 [details]
Bug 1604633 - Stop calling -[NSOpenGLContext pixelFormat] on 10.9, take 2. r=jrmuizel

mac crash fix, approved for 72.0b9

Attachment #9116546 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: