Bug 1604633 - Stop calling -[NSOpenGLContext pixelFormat] on 10.9, take 2. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D57555